--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <img src="media/my_photo.jpg" alt="ODUKOGBE DAVID Profile" id="profile-img">
-        <h1>Hello, I'm ODUKOGBE DAVID!</h1>
+        <h1>Hello, I'm Onuchukwu chidubem Terry!</h1>
         <p>Passionate about web development and creating engaging experiences.</p>
     </header>
 
@@ -52,7 +52,7 @@
     </main>
 
     <footer>
-        <p>&copy; <span id="current-year"></span> ODUKOGBE DAVID. All rights reserved.</p>
+        <p>&copy; <span id="current-year"></span> Onuchukwu chidubem terry. All rights reserved.</p>
         <button id="themeToggle">Toggle Dark Mode</button>
     </footer>
 
